<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8DAA75"
    tools:context=".TakeAttendanceActivity">

    <TextView
        android:id="@+id/take_attendance_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#68BF3B"
        android:backgroundTint="#9ECD59"
        android:padding="16dp"
        android:text="@string/take_attendance_title"
        android:textColor="#0A5C16"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/select_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:contentDescription="@string/select_date_description"
        app:layout_constraintTop_toBottomOf="@id/take_attendance_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/selected_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_date_selected"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/select_date_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9"
        android:layout_marginTop="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attendance_list_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="#4CD7DE"
        android:backgroundTint="#D1A9D7"
        app:layout_constraintBottom_toTopOf="@id/save_attendance_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selected_date"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/attendance_empty_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_students_found"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/selected_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/save_attendance_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#2455AF"
        android:contentDescription="@string/save_attendance_description"
        android:text="@string/save_attendance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>